<resources>

    <string name="app_name">RSS Reader</string>
    <string name="liste_RSS">List of RSS feeds :</string>
    
    <string name="refresh_all">Refresh all</string>
    <string name="add_rss">Add a RSS feed</string>
    <string name="add_lemonde">Add Le Monde\'s feed</string>
    <string name="add_usgs">Add USGS\'s feed</string>
    <string name="add_programmez">Add Programmez\'s feed</string>
    
    <string name="delete_rss">Remove this RSS feed</string>
    <string name="delete_rss_sure">Are you sure to want to delete this RSS feed ?</string>
    <string name="update_rss">Update this RSS feed</string>
    <string name="choix_adresse">Enter an address</string>
    
	<string name="no">Cancel</string>
	<string name="yes">Ok</string>
	
	<string name="download">Downloading RSS feed</string>
	<string name="wait">Wait&#8230;</string>
	
	<string name="title">Title :</string>
	<string name="link">Link :</string>
	<string name="description">Description :</string>
	<string name="date">Date :</string>
	<string name="click_here">Clickez here</string>
	
	<string name="connection_problem">Connection Problem</string>
	<string name="success">RSS feed successfully downloaded</string>

</resources>